Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <span>PHARRELLWILLIAMS.COM </span>
 
-        <img src="https://s3.amazonaws.com" alt="columbia-logo.png" >
+        <img src="" alt=" " >
 
         <span>COLUMBIARECORDS.COM</span>
 
