--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <span>PHARRELLWILLIAMS.COM </span>
 
-       <img src="images/columbia-logo.png" alt="columnbia-logo">
+       <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columnbia-logo">
 
         <span>COLUMBIARECORDS.COM</span>
 
