--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <br>
 
-        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="Sony Logo">
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="">
 
       </div>
     </div>
